# clientsviewer

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  logs.json  manage.py  pyproject.toml  requirements.txt
clientsviewer/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
demons/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
demons/management/commands/: check_memory.py
userinfo/: models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
userinfo/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_alter_user_name_alter_user_sex_alter_user_surname.py
weather/: serializers.py  urls.py  views.py
